# darts

./: .gitignore  README.md  pyproject.toml
cnn/: architect.py  model.py  model_search.py  test.py  test_imagenet.py  train.py  train_imagenet.py  train_search.py  utils.py
rnn/: architect.py  data.py  model.py  model_search.py  test.py  train.py  train_search.py  utils.py
